--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,16 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#Keil files
+*.htm
+*.map
+*.sct
+*.axf
+*.crf
+*.d
+*.dep
+*.hex
+*.lnp
+*.o
+*.dbgconf
